Fix word align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2557,6 +2557,11 @@
 		width: 100%;
 	}
 
+	.skills-list h3 {
+		display: block;
+		font-size: 20px;
+	}
+
 .group {
 	content: "";
 	clear: both;
